Style browser_button popup

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -2,11 +2,41 @@ html,body {
     overflow-x : hidden;
     font-size  : 13px;
     width      : 320px;
-    /*max-width  : 90%;*/
+}
+
+#panels {
+	box-sizing: border-box;
+	padding: 20px 0;
+	height: 500px;
+	max-height: 100vw;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 #panels>.hidden{
 	display: none;
+}
+
+.panel-list-item{
+	position: relative;
+	cursor: pointer;
+}
+
+.panel-list-item::after{
+	content: attr(data-actiontext);
+	position: absolute; right: 2px; top: 2px; bottom: 2px;
+	background: #e2e2e2;
+	color: #000;
+	opacity: 0;
+	transition: opacity .3 ease;
+	padding: 1px 5px;
+	font-size: .8em;
+	border-radius: 5px;
+	box-shadow: 0 0 0 1px rgba(0,0,0,.2);
+}
+
+.panel-list-item:hover::after{
+	opacity: 1;
 }
 
 .panel-section-list img.icon{
@@ -24,6 +54,7 @@ html,body {
 	overflow      : hidden;
 }
 
+.panel-section-header img.text-section-icon + div.text-section-header,
 .panel-section-list img.icon + div.text {
 	margin-left: 10px;
 }
