--- a/src/browser_action/browser_action.css
+++ b/src/browser_action/browser_action.css
@@ -1,20 +1,17 @@
 html,body {
     overflow-x : hidden;
-    font-size  : 13px;
-    width      : 320px;
+    font-size : 13px;
+    width : 420px;
 }
 
-#panels {
+#zaa-list-current,
+#zaa-list-popups {
 	box-sizing: border-box;
 	padding: 20px 0;
-	height: 500px;
-	max-height: 100vw;
+	/*max-height: 200px;*/
+	max-height: calc(50vw - 80px);
 	overflow-x: hidden;
 	overflow-y: scroll;
-}
-
-#panels>.hidden{
-	display: none;
 }
 
 .panel-list-item{
@@ -22,7 +19,7 @@ html,body {
 	cursor: pointer;
 }
 
-.panel-list-item::after{
+/* .panel-list-item::after{
 	content: attr(data-actiontext);
 	position: absolute; right: 2px; top: 2px; bottom: 2px;
 	background: #e2e2e2;
@@ -37,7 +34,7 @@ html,body {
 
 .panel-list-item:hover::after{
 	opacity: 1;
-}
+} */
 
 .panel-section-list img.icon{
 	max-width  : 16px;
